<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fontFamily="@font/pirata"
    tools:context=".InicioActivity">


    <LinearLayout
        android:id="@+id/llLoginContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.60"
        app:layout_constraintVertical_bias="0.7"
        >

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pirata"
            android:layout_gravity="start"
            android:layout_marginBottom="14dp"
            android:text="@string/login"
            android:textColor="@color/anaranjado"
            android:textSize="50sp" />


        <EditText
            android:id="@+id/etUsuari"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext"
            android:textColorHint="@color/anaranjado"
            android:hint="@string/hint_usuari"
            android:layout_gravity="start"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/blanco"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/etContrasenya"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="32dp"
            android:hint="@string/hint_contrasenya"
            android:inputType="textPassword"
            android:background="@drawable/edittext"
            android:textColorHint="@color/anaranjado"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/blanco"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnEntra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/pirata"
            android:background="@drawable/btnentra"
            android:backgroundTint="@null"
            android:layout_gravity="center"
            android:text="@string/btn_entra"
            android:textColor="@color/blanco"
            android:textSize="18sp"
            android:letterSpacing="0.1"
            android:elevation="8dp"
            android:stateListAnimator="@null" />

        <Button
            android:id="@+id/btnRegistrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pirata"
            android:background="@drawable/btnregistro"
            android:text="@string/btn_registrate"
            android:layout_gravity="center"
            android:textColor="@color/blanco"
            android:textSize="16sp"
            android:letterSpacing="0.1"
            android:elevation="8dp"
            android:stateListAnimator="@null" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>